Style tweak to maybe stop horizontal scrolling?

--- a/src/index.styl
+++ b/src/index.styl
@@ -15,7 +15,7 @@ ul.outline li.outline-node {
   border-top: 1px solid transparent;
 }
 ul.outline li.outline-node .content {
-  width: 100%;
+  width: 99%;
   display: flex;
   flex-direction: row;
   align-content: stretch;
